--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,9 @@
 @import 'components/layout.css';
 @import "./styles/main.css";
 
-.container {
-  width: 80%;
-  margin: 0 auto;
-  color: var(--midnight);
-}
+html {
+  height: 100%;
+} 
 
 .card {
   width: 80%;
